syntax = "proto3";
package com.example.socketdemo;
option java_package = "com.example.socketdemo";

message SendTcp{
  int32 a = 1;
  int32 b = 2;
  bytes c = 3;
  int64 d = 4;
  string e = 5;
}